--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.4",
+    "@prisma/client": "^5.16.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -28,6 +29,7 @@
     "next-auth": "5.0.0-beta.19",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
+    "prisma": "^5.16.2",
     "prop-types": "^15.8.1",
     "react": "19.0.0-rc.0",
     "react-dom": "19.0.0-rc.0",
